Made minor edits

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -256,7 +256,7 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "masterPortfolio",
+  "projectName": "bryankeane",
   "projectOwner": "ashutosh1919",
   "repoType": "github",
   "repoHost": "https://github.com",
